# Historical-Agents

./: .gitignore  Adolf Hitler-Bio.txt  Adolf Hitler-Quote.json  Benjamin_Netanyahu_Quotes.json  Elon musk-Bio.txt  Norman Finkelstein-Quote.json  Norman Finkelstein.txt  README.md  William Shakespeare-Bio.txt  William Shakespeare-Quote.json  adolf_hitler_kg.csv  benjamin_netanyahu_kg.csv  conversatonalLog.py  debate_agent_updated_llama3_2_rate_limit_modifedByMingwei.ipynb  debate_flow_plot.html  elon_musk_kg.csv  enhanced_shakespeare_quotes.json  mongo.py  mongodb.py  myragTest.ipynb  norman_gary_finkelstein_kg.csv  package-lock.json  package.json  personas.json  poem.txt  pyproject.toml  requirements.txt  tbd.py  william_shakespeare_kg.csv
backend/: historical_figures.json  main.py
data/: messi_style.json  ronaldo_style.json
fastapi-backend/: app.py  debate_agent.py  main.py  pyproject.toml
fastapi-backend/nodes/: anti_debator_node.py  debate_summarize_node.py  greeting_node.py  planning_node.py  pro_debator_node.py  search_web.py  search_wikipedia.py  winner_decider_node.py
fastapi-backend/router_functions/: iteration_router.py  planner_and_pro_router.py  pro_and_anti_decider_router.py
fastapi-backend/states/: additional_states.py  agent_state.py
frontend/src/: App.tsx  (+1 more)
guardrails/: debate_agent.py  gr_implementation.py
langgraph/: Maaz-test.py  flow_langgraph.py  index.html  workflow.py
nextjs-app/: package-lock.json  package.json  tsconfig.json
outputs/: debate_final.txt  debate_round_0.txt  debate_round_1.txt  debate_round_2.txt  debate_round_3.txt
(+52 files in other folders)
