[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["Mian Maaz Ullah Khan <115078151+mmaazkhanhere@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
langgraph = "^0.2.53"
langchain = "^0.3.9"
langchain-google-genai = "^2.0.6"
wikipedia = "^1.4.0"
duckduckgo-search = "^6.3.7"
langchain-groq = "^0.2.1"
langchain-community = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
